[package]
name = "mmx-meter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "MiniMax usage monitor for Windows taskbar"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
ureq = "2"
image = "0.25"
resvg = "0.43"
winreg = "0.52"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1